FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3/error.log
/tmp/tmp5dxyvds1/dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3.cpp: In member function ‘virtual void dolfin::dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp5dxyvds1/dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3.cpp:77:206: error: expected ‘)’ before ‘;’ token
           values[0] = (4*pi*G*pow(2*pi,-1.5)*source_mass/pow(stand_dev_peak,3)*exp(-2*(pow(stand_dev_peak,2)))*(exp(-(pow((x[0]-position_x_0),2) + pow((x[1]-position_y_0),2) + pow((x[2]-position_z_0),2))));
                                                                                                                                                                                                              ^
/tmp/tmp5dxyvds1/dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3.cpp: In member function ‘virtual double dolfin::dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3::get_property(std::__cxx11::string) const’:
/tmp/tmp5dxyvds1/dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3.cpp:89:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "stand_dev") return stand_dev;          if (name == "stand_dev_peak") return stand_dev_peak;          if (name == "p") return p;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;          if (name == "position_x_0") return position_x_0;          if (name == "position_y_0") return position_y_0;          if (name == "position_z_0") return position_z_0;
           ^~
/tmp/tmp5dxyvds1/dolfin_expression_6c61436b708e826e4d771b39fc2ddbd3.cpp:89:49: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "a0") return a0;          if (name == "ms") return ms;          if (name == "mgb") return mgb;          if (name == "G") return G;          if (name == "ly") return ly;          if (name == "kp") return kp;          if (name == "radius_tot") return radius_tot;          if (name == "volume_out") return volume_out;          if (name == "stand_dev") return stand_dev;          if (name == "stand_dev_peak") return stand_dev_peak;          if (name == "p") return p;          if (name == "source_number") return source_number;          if (name == "source_mass") return source_mass;          if (name == "position_x_0") return position_x_0;          if (name == "position_y_0") return position_y_0;          if (name == "position_z_0") return position_z_0;
                                                 ^~
